crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_avg_does_not_average_averages_result.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: pretty(&result)
---
+-----------------+
| avg(l_quantity) |
+-----------------+
| 30.000000       |
+-----------------+
