crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_count_global_optimized_plan.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: plan_display(&optimized)
---
AggregateExec: mode=Final, gby=[], aggr=[count(*)]
  CoalescePartitionsExec
    UnionExec
      PartialAggregationFlightSqlExec sql=SELECT COUNT(1) AS "__agg_0" FROM foo.foo.lineitem
      PartialAggregationFlightSqlExec sql=SELECT COUNT(1) AS "__agg_0" FROM foo.foo.lineitem
