crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_grouped_sum_count_avg_optimized_plan.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: plan_display(&optimized)
---
AggregateExec: mode=Final, gby=[l_returnflag@0 as l_returnflag], aggr=[sum(l_quantity), count(*), avg(l_quantity)]
  CoalescePartitionsExec
    UnionExec
      PartialAggregationFlightSqlExec sql=SELECT "l_returnflag", SUM("l_quantity") AS "__agg_0", COUNT(1) AS "__agg_1", COUNT("l_quantity") AS "__agg_2" FROM foo.foo.lineitem GROUP BY "l_returnflag"
      PartialAggregationFlightSqlExec sql=SELECT "l_returnflag", SUM("l_quantity") AS "__agg_0", COUNT(1) AS "__agg_1", COUNT("l_quantity") AS "__agg_2" FROM foo.foo.lineitem GROUP BY "l_returnflag"
