crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_grouped_sum_count_avg_plan.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: plan_display(&plan)
---
AggregateExec: mode=Final, gby=[l_returnflag@0 as l_returnflag], aggr=[sum(l_quantity), count(*), avg(l_quantity)]
  CoalescePartitionsExec
    AggregateExec: mode=Partial, gby=[l_returnflag@3 as l_returnflag], aggr=[sum(l_quantity), count(*), avg(l_quantity)]
      UnionExec
        FlightSqlExec sql=SELECT l_quantity, l_extendedprice, l_discount, l_returnflag, l_linestatus FROM foo.foo.lineitem
        FlightSqlExec sql=SELECT l_quantity, l_extendedprice, l_discount, l_returnflag, l_linestatus FROM foo.foo.lineitem
