crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_grouped_sum_count_avg_result.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: pretty_sorted(&result)
---
+--------------+-----------------+----------+-----------------+
| l_returnflag | sum(l_quantity) | count(*) | avg(l_quantity) |
+--------------+-----------------+----------+-----------------+
| A            | 70.00           | 3        | 23.333333       |
| B            | 80.00           | 2        | 40.000000       |
+--------------+-----------------+----------+-----------------+
