crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_min_max_global_optimized_plan.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: plan_display(&optimized)
---
AggregateExec: mode=Final, gby=[], aggr=[min(l_quantity), max(l_quantity)]
  CoalescePartitionsExec
    UnionExec
      PartialAggregationFlightSqlExec sql=SELECT MIN("l_quantity") AS "__agg_0", MAX("l_quantity") AS "__agg_1" FROM foo.foo.lineitem
      PartialAggregationFlightSqlExec sql=SELECT MIN("l_quantity") AS "__agg_0", MAX("l_quantity") AS "__agg_1" FROM foo.foo.lineitem
