crates/datafusion-optimizer-rules/src/physical_plan/flightsql/snapshots/datafusion_optimizer_rules__physical_plan__flightsql__aggregate_pushdown__tests__result_min_max_global_result.snap
---
source: crates/datafusion-optimizer-rules/src/physical_plan/flightsql/aggregate_pushdown.rs
expression: pretty(&result)
---
+-----------------+-----------------+
| min(l_quantity) | max(l_quantity) |
+-----------------+-----------------+
| 10.00           | 50.00           |
+-----------------+-----------------+
